CMS-10222 Fix visibility of drop-widget border
(cherry picked from commit aa8d8c819a422652cb61bcba3a986ead54e31284)

--- a/cms/gallery/frontend/src/main/java/org/hippoecm/frontend/plugins/gallery/editor/crop/crop-editor-dialog.css
+++ b/cms/gallery/frontend/src/main/java/org/hippoecm/frontend/plugins/gallery/editor/crop/crop-editor-dialog.css
@@ -26,9 +26,13 @@
   float: left;
 }
 
+.left-crop-area .yui-skin-sam .yui-crop .yui-resize {
+  border: 1px dashed #666;
+}
+
 .right-crop-area {
   float: right;
-  border-left: 1px solid #999999;
+  border-left: 1px solid #999;
   max-width: 216px;
   width: 216px;
   padding: 5px 5px 5px 12px;
